--- a/AlbertBiju/index.html
+++ b/AlbertBiju/index.html
@@ -1,1 +1,40 @@
 
+<!-- index.html -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>HackSphere 2025</title>
+  <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@600&family=Roboto&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+  <header>
+    <h1>HackSphere 2025</h1>
+    <p>Join the global 48-hour hackathon bringing together developers, designers, and creators from all over the world.</p>
+    <div class="cta">
+      <a href="#">Register Now</a>
+    </div>
+  </header>
+  
+  <section class="features">
+    <div class="feature">
+      <h3>✨ Innovation Unleashed</h3>
+      <p>Build projects that solve real-world problems and redefine the future.</p>
+    </div>
+    <div class="feature">
+      <h3>🌐 Global Collaboration</h3>
+      <p>Connect with participants and mentors from over 50 countries.</p>
+    </div>
+    <div class="feature">
+      <h3>⏱ 48-Hour Challenge</h3>
+      <p>Push your limits in a high-energy coding sprint with amazing prizes.</p>
+    </div>
+  </section>
+
+  <footer>
+    &copy; 2025 HackSphere. All rights reserved. | Designed for creators, by creators.
+  </footer>
+</body>
+</html>
