--- a/Abhishek_Krishna_A_M/public/index.html
+++ b/Abhishek_Krishna_A_M/public/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>HackSphere 2025</title>
+    <base href="/Internship-Task/" /> 
   </head>
   <body>
     <div id="root"></div>
