--- a/AlbertBiju/index.html
+++ b/AlbertBiju/index.html
@@ -1,23 +1,29 @@
-
-<!-- index.html -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>HackSphere 2025</title>
   <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@600&family=Roboto&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="hack.css">
 </head>
 <body>
-  <header>
-    <h1>HackSphere 2025</h1>
-    <p>Join the global 48-hour hackathon bringing together developers, designers, and creators from all over the world.</p>
-    <div class="cta">
-      <a href="#">Register Now</a>
-    </div>
-  </header>
   
+
+ <header>
+  <section class="hero">
+    
+      <h1>HackSphere 2025</h1>
+      <p class="tagline">“Code. Create. Conquer.”</p>
+      <p class="event-info">June 20–22, 2025 &mdash; Online</p>
+      <div class="cta">
+        <a href="#">Register Now</a>
+      </div>
+   
+  </section>
+</header>
+
+
   <section class="features">
     <div class="feature">
       <h3>✨ Innovation Unleashed</h3>
@@ -31,6 +37,13 @@
       <h3>⏱ 48-Hour Challenge</h3>
       <p>Push your limits in a high-energy coding sprint with amazing prizes.</p>
     </div>
+  </section>
+
+  <section class="about">
+    
+    <h2>ℹ️ About HackSphere 2025</h2>
+    <p>HackSphere 2025 is a global 48-hour online hackathon designed to unite brilliant minds from around the world. Whether you're a developer, designer, or creative thinker, this event offers a unique opportunity to collaborate, innovate, and build impactful solutions.</p>
+    <p>From idea to execution, you'll engage in high-energy problem-solving, network with international peers and mentors, and compete for exciting rewards — all from the comfort of your own space. Join us and be part of a futuristic tech movement.</p>
   </section>
 
   <footer>
