--- a/AlbertBiju/index.html
+++ b/AlbertBiju/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>HackSphere 2025</title>
   <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@600&family=Roboto&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="hack.css">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   
