--- a/AlbertBiju/index.html
+++ b/AlbertBiju/index.html
@@ -3,6 +3,8 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="description" content="Join HackSphere 2025 — a 48-hour global online hackathon. Code, collaborate, and compete for exciting prizes!">
+
   <title>HackSphere 2025</title>
   <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@600&family=Roboto&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
