--- a/AlbertBiju/index.html
+++ b/AlbertBiju/index.html
@@ -1,55 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <meta name="description" content="Join HackSphere 2025 — a 48-hour global online hackathon. Code, collaborate, and compete for exciting prizes!">
-
-  <title>HackSphere 2025</title>
-  <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@600&family=Roboto&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="style.css">
-</head>
-<body>
-  
-
- <header>
-  <section class="hero">
-    
-      <h1>HackSphere 2025</h1>
-      <p class="tagline">“Code. Create. Conquer.”</p>
-      <p class="event-info">June 20–22, 2025 &mdash; Online</p>
-      <div class="cta">
-        <a href="#">Register Now</a>
-      </div>
-   
-  </section>
-</header>
-
-
-  <section class="features">
-    <div class="feature">
-      <h3>✨ Innovation Unleashed</h3>
-      <p>Build projects that solve real-world problems and redefine the future.</p>
-    </div>
-    <div class="feature">
-      <h3>🌐 Global Collaboration</h3>
-      <p>Connect with participants and mentors from over 50 countries.</p>
-    </div>
-    <div class="feature">
-      <h3>⏱ 48-Hour Challenge</h3>
-      <p>Push your limits in a high-energy coding sprint with amazing prizes.</p>
-    </div>
-  </section>
-
-  <section class="about">
-    
-    <h2>ℹ️ About HackSphere 2025</h2>
-    <p>HackSphere 2025 is a global 48-hour online hackathon designed to unite brilliant minds from around the world. Whether you're a developer, designer, or creative thinker, this event offers a unique opportunity to collaborate, innovate, and build impactful solutions.</p>
-    <p>From idea to execution, you'll engage in high-energy problem-solving, network with international peers and mentors, and compete for exciting rewards — all from the comfort of your own space. Join us and be part of a futuristic tech movement.</p>
-  </section>
-
-  <footer>
-    &copy; 2025 HackSphere. All rights reserved. | Designed for creators, by creators.
-  </footer>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>HackSphere 2025</title>
+  </head>
+  <body>
+    <div id="root"></div>
+    <script type="module" src="/src/main.jsx"></script>
+  </body>
 </html>
