--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
       <p>June 20–22, 2025 – Online</p>
       <a href="#" class="btn">Register Now</a>
     </div>
-    <img src="images/hack-image.png" alt="Hackathon Image" />
+    <img src="images/image1.jpg" alt="Hackathon Image" />
   </section>
 
   <!-- Countdown Timer -->
