--- a/HackSphere.html
+++ b/HackSphere.html
@@ -26,7 +26,7 @@
       padding: 20px;
     }
     .backk {
-      background-color: green;
+      background-color: #003153;
       height: 100vh;
       width: 100vw;
     }
@@ -129,7 +129,7 @@
   </nav>
 
   <div class="hackk">
-    <h1 class="headsss">HACKSPHERE 2025</h1>
+    <h1 class="headsss" style="font-weight:bold;">HACKSPHERE 2025</h1>
     <p>"Code.create.conquer..."</p>
   </div>
 
